--- a/producto_editar.html
+++ b/producto_editar.html
@@ -78,6 +78,8 @@
     ></script>
     <script src="./js/main.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
     <script src="./js/producto_editar.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </body>
 </html>
