--- a/productos.html
+++ b/productos.html
@@ -22,7 +22,7 @@
       <div id="app" class="container">
         <h1>Productos</h1>
         <br />
-        <a class="btn btn-primary" href="producto_nuevo.html">Nuevo</a>
+        <a class="btn btn-success" href="producto_nuevo.html">Nuevo</a>
         <br /><br />
         <div v-if="error">
           <p>Lo sentimos , ........</p>
@@ -62,6 +62,7 @@
                     <td>
                       <a
                         class="btn btn-primary"
+                        style="margin-right: 5px"
                         :href="'producto_editar.html?id='+ producto.id"
                         >Editar</a
                       >
@@ -98,5 +99,6 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!--Link de VUE-->
     <script src="./js/producto.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </body>
 </html>
